--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#805ad5" />
-        <meta
-            name="description"
-            content="Posty is a web application built to simulate a multi-user blogging platform"
+        <meta name="theme-color" content="#EA3A60" />
+        <meta name="description" content="Survey, like a ninja" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+            rel="stylesheet"
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
         <!--
@@ -24,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Posty | Multi-user blogging platform</title>
+        <title>Survey Ninja | Survey, like a ninja</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
