--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <meta name="theme-color" content="#EA3A60" />
         <meta name="description" content="Survey, like a ninja" />
         <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap"
             rel="stylesheet"
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
